--- a/src/TesteTecnicoBancos.Api/appsettings.json
+++ b/src/TesteTecnicoBancos.Api/appsettings.json
@@ -1,5 +1,9 @@
 {
   "ConnectionStrings": {
     "PostgresConnection": "Host=localhost;Port=5432;Database=TesteTecnicoBancos;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "Secret": "chave-secreta-123-123-chave-secreta-123-123",
+    "ExpirationHours": 2
   }
 }
